--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-error-boundary": "^6.0.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
