--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-error-boundary": "^6.0.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
