feat(auth): integrate user authentication and session handling
- Added user creation with secure password hashing using `@node-rs/argon2`.
- Implemented Lucia session management:
  - Created user sessions upon successful signup.
  - Generated session cookies and passed them to the browser using `cookies` API.
- Updated `signUp` server action:
  - Removed `toActionState` success logic in favor of `redirect()` to `ticketsPath()` after a successful signup.
  - Enforced form validation using Zod (username, email, password, confirmPassword).
- Installed `@node-rs/argon2` for fast and secure password hashing.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@node-rs/argon2": "^2.0.2",
+    "@phc/argon2": "^1.0.9",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -20,6 +22,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@types/big.js": "^6.2.2",
+    "argon2": "^0.44.0",
     "big.js": "^7.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
