--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "fastest-levenshtein": "^1.0.16",
     "lucia": "^3.2.2",
     "lucide-react": "^0.561.0",
     "next": "16.1.1",
