--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-error-boundary": "^6.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "use-debounce": "^10.1.0",
     "zod": "^4.2.1"
   },
   "devDependencies": {
