--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.561.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.8.6",
     "pg": "^8.16.3",
     "react": "19.2.1",
     "react-day-picker": "^9.13.0",
