--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.1",
     "react-error-boundary": "^6.0.0",
+    "react-intersection-observer": "^10.0.2",
     "sonner": "^2.0.7",
     "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
