--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@node-rs/argon2": "^2.0.2",
+    "@oslojs/crypto": "^1.0.1",
     "@phc/argon2": "^1.0.9",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.3.0",
