--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@node-rs/argon2": "^2.0.2",
     "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "@phc/argon2": "^1.0.9",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.3.0",
