--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.20",
     "@types/big.js": "^6.2.2",
+    "@types/zxcvbn": "^4.4.5",
     "argon2": "^0.44.0",
     "big.js": "^7.0.1",
     "class-variance-authority": "^0.7.1",
@@ -52,7 +53,8 @@
     "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.1.0",
-    "zod": "^4.2.1"
+    "zod": "^4.2.1",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
