--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "type": "tsc --noEmit"
+    "type": "tsc --noEmit",
+    "email:dev": "email dev --dir src/emails"
   },
   "dependencies": {
     "@lucia-auth/adapter-prisma": "^4.0.1",
@@ -28,6 +29,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/components": "1.0.7",
     "@tanstack/react-query": "^5.90.20",
     "@types/big.js": "^6.2.2",
     "@types/zxcvbn": "^4.4.5",
@@ -49,6 +51,7 @@
     "react-dom": "19.2.1",
     "react-error-boundary": "^6.0.0",
     "react-intersection-observer": "^10.0.2",
+    "resend": "^6.9.1",
     "sonner": "^2.0.7",
     "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
@@ -57,6 +60,7 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@react-email/preview-server": "5.2.6",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
@@ -67,6 +71,7 @@
     "eslint-config-next": "16.0.10",
     "prettier": "3.8.1",
     "prisma": "^7.3.0",
+    "react-email": "5.2.6",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
