--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "fastest-levenshtein": "^1.0.16",
+    "inngest": "^3.51.0",
     "lucia": "^3.2.2",
     "lucide-react": "^0.561.0",
     "next": "16.1.1",
