--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^17.2.3",
     "fastest-levenshtein": "^1.0.16",
     "inngest": "^3.51.0",
+    "input-otp": "^1.4.2",
     "lucia": "^3.2.2",
     "lucide-react": "^0.561.0",
     "next": "16.1.1",
